Création du formulaire de connexion

--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -1,1 +1,10 @@
-hello home
+<div class="jumbotron text-center">
+	<div>
+		<h1>Inscrivez-vous!</h1>
+	</div>
+
+	<div>
+		<p>Connectez-vous pour écrire ici.</p>
+		<a href="/login" class="btn btn-primary">Connexion</a>
+	</div>
+</div>
