--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -23,10 +23,10 @@
         <script type="text/javascript" src="app/app.js"></script>
     </head>
     <body>
-
-    <div ng-view>
-        
-    </div>
+    
+    <main class="container">
+        <div ng-view></div>
+    </main>
 
     </body>
 </html>
