--- a/public/app/views/pages/login.html
+++ b/public/app/views/pages/login.html
@@ -1,9 +1,12 @@
-<div class="container" ng-controller="mainController as login">
-	
-	<form method="post" ng-submit="login.doLogin()">
-		Identifiant: <input type="text" name="username"  ng-model="login.loginData.username">
-		Mot de passe: <input type="text" name="password" ng-model="login.loginData.password">
-		<button type="submit" class="btn btn-success">Se connecter</button>
-	</form>
-
+<div class="container" ng-controller="MainController as login">
+	<div class="row">
+		<div class="col-sm-6 col-md-4 col-md-offset-4">
+			<h1>Connexion</h1>
+			<form class="form-signin" method="post" ng-submit="login.doLogin()">
+				Pseudo: <input type="text" name="username" class="form-control" ng-model="login.loginData.username">
+				Mot de passe: <input type="password" name="password" class="form-control" ng-model="login.loginData.password">
+				<button type="submit" class="btn btn-success">Se connecter</button>
+			</form>
+		</div>
+	</div>
 </div>
