Ajout des formulaires de connexion, d'inscription, et de post des stories en temps réel avec socket.io

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -11,14 +11,17 @@
         <!-- Librairies AngularJS -->
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.2/angular-route.min.js"></script>
+        <script type="text/javascript" src="/socket.io/socket.io.js"></script>
         
         <!-- Services AngularJS -->
         <script type="text/javascript" src="app/services/authService.js"></script>
         <script type="text/javascript" src="app/services/userService.js"></script>
+        <script type="text/javascript" src="app/services/storyService.js"></script>
 
         <!-- Controllers AngularJS -->
         <script type="text/javascript" src="app/controllers/mainCtrl.js"></script>
         <script type="text/javascript" src="app/controllers/userCtrl.js"></script>
+        <script type="text/javascript" src="app/controllers/storyCtrl.js"></script>
         
         <!-- Dépendances AngularJS -->
         <script type="text/javascript" src="app/app.routes.js"></script>
