--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -1,4 +1,4 @@
-<div class="jumbotron text-center">
+<div class="jumbotron text-center" ng-if="!main.loggedIn">
 	<div>
 		<h1>Inscrivez-vous!</h1>
 	</div>
@@ -6,5 +6,35 @@
 	<div>
 		<p>Connectez-vous pour écrire ici.</p>
 		<a href="/login" class="btn btn-primary">Connexion</a>
+	</div>
+</div>
+
+<div class="row" ng-if="main.loggedIn">
+	<div class="col-md-3">
+		
+	</div>
+
+	<div class="col-md-4" ng-controller="StoryController as story">
+		<div class="row">
+			<div class="panel panel-primary">
+				<div class="panel-heading">Ecrivez!</div>
+				<div class="panel-body">
+					<form ng-submit="story.createStory()">
+						<input type="text" name="story" class="form-control input-lg" ng-model="story.StoryData.content" placeholder="....." required>
+					</form>
+				</div>
+			</div>
+
+			<div class="panel panel-success">
+			<div class="panel-heading">Vos posts</div>
+				<div class="panel-body" ng-repeat="story in story.stories">
+					<p>{{ story.content }}</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="col-md-3">
+		
 	</div>
 </div>
