--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -22,6 +22,9 @@
         <script type="text/javascript" src="app/controllers/mainCtrl.js"></script>
         <script type="text/javascript" src="app/controllers/userCtrl.js"></script>
         <script type="text/javascript" src="app/controllers/storyCtrl.js"></script>
+
+        <!-- Directives AngularJS -->
+        <script type="text/javascript" src="app/directives/reverse.js"></script>
         
         <!-- Dépendances AngularJS -->
         <script type="text/javascript" src="app/app.routes.js"></script>
