--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -27,7 +27,7 @@
 
 			<div class="panel panel-success">
 			<div class="panel-heading">Vos posts</div>
-				<div class="panel-body" ng-repeat="story in story.stories">
+				<div class="panel-body" ng-repeat="story in story.stories | reverse">
 					<p>{{ story.content }}</p>
 				</div>
 			</div>
